unpackaged/main/default/objects/pse__Time_Variance_Settings__c/pse__Time_Variance_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the properties of the Time Variance calculation report when clicking the Generate Time Variance button from a region, practice, or group.</description>
    <label>Time Variance Settings</label>
</CustomObject>