unpackaged/main/default/objects/pse__Time_Variance_Settings__c/fields/pse__Allowed_Variance_Over__c.field-meta.xml
<CustomField>
    <fullName>pse__Allowed_Variance_Over__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Specifies the time variance over scheduled working hours to include in time variance calculations.</inlineHelpText>
    <label>Allowed Variance Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>