unpackaged/main/default/objects/pse__Time_Variance_Settings__c/fields/pse__Use_Percentage__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Percentage__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If true, the values in the Allowed Variance Over and Allowed Variance Under settings are percentages of time variance. If false, the values in the Allowed Variance Over and Allowed Variance Under settings are hours.  This setting is true by default.</inlineHelpText>
    <label>Use Percentage</label>
    <type>Checkbox</type>
</CustomField>